--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
 
-	<canvas id="canvas" width="200px" height="200px"></canvas>
+	<canvas tabindex='1' id="canvas" width="200px" height="200px"></canvas>
 
 	<script src="js/canvas.js" charset="utf-8"></script>
 	<script src="js/main.js" charset="utf-8"></script>
