I don't even know what

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 			overflow: hidden;
 			display: flex;
 			justify-content: center;
-			background: #eee;
+			background-color: transparent;
 		}
 
 		canvas {
 			image-rendering: pixelated;
 			width: 600px;
 			height: 600px;
-			background: white;
+			background-color: transparent;
 		}
 	</style>
 </head>
