--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			overflow: hidden;
 			display: flex;
 			justify-content: center;
-			background-color: transparent;
+			background-color: black;
 		}
 
 		canvas {
